# modules/ProductClass3/Providers/RouteServiceProvider.php
@@ -1,0 +1,21 @@
+<?php
+
+namespace Modules\ProductClass3\Providers;
+
+use Illuminate\Foundation\Support\Providers\RouteServiceProvider as BaseRouteServiceProvider;
+use Illuminate\Support\Facades\Route;
+
+class RouteServiceProvider extends BaseRouteServiceProvider
+{
+    public function boot(): void
+    {
+        $this->routes(function () {
+            Route::middleware('api')
+                ->prefix('api')
+                ->group(__DIR__.'/../routes/api.php');
+
+            Route::middleware('web')
+                ->group(__DIR__.'/../routes/web.php');
+        });
+    }
+}
