# modules/ProductClass3/routes/api.php
@@ -1,0 +1,5 @@
+<?php
+
+use Illuminate\Support\Facades\Route;
+
+// Rutas para ProductClass3
